<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.leonadi.potify.PlantDetailActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="4"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:text="@string/plant_name"
                    android:gravity="center_vertical"
                    android:layout_row="0"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Lizzy"
                    android:id="@+id/plant_detail_name"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:text="@string/plant_species"
                    android:gravity="center_vertical"
                    android:layout_row="1"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Leo's Favorite"
                    android:id="@+id/plant_detail_species"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:text="@string/plant_interval"
                    android:gravity="center_vertical"
                    android:layout_row="2"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7 days"
                    android:id="@+id/plant_detail_water"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:text="@string/plant_lastwatered"
                    android:gravity="center_vertical"
                    android:layout_row="3"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yesterday"
                    android:id="@+id/plant_detail_lastwater"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:textColor="@android:color/black"/>
            </GridLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" >
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/waterBar"
                    android:max="100"
                    android:progress="50"
                    android:enabled="false"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:paddingLeft="-8dp"
                    android:paddingRight="-8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3 days remaining"
                    android:id="@+id/plant_detail_remaining" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plant_watered"
                    android:id="@+id/plant_detail_water_btn"
                    android:layout_gravity="end" />
            </LinearLayout>



        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
